# sakura

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Directory.Build.props  README.md  UseLocalSourceGenerators.ps1  UseLocalSourceGenerators.sh  UsePublishedSourceGenerators.ps1  UsePublishedSourceGenerators.sh  sakura.sln  sakura.sln.DotSettings
.github/workflows/: build-ffmpeg.yml  build-sakura-metal.yml  build-spirv.yml  publish-framework.yml  publish-native-libraries.yml  publish-source-generators.yml  publish-templates.yml
Sakura.Framework/: App.cs  RuntimeInfo.cs  Sakura.Framework.csproj  Sakura.Framework.targets
Sakura.Framework.Benchmarks/: BenchmarkTree.cs  Program.cs  Sakura.Framework.Benchmarks.csproj
Sakura.Framework.Benchmarks/Benchmarks/: ClockBenchmarks.cs  ConstructionBenchmarks.cs  DelayedLoadBenchmarks.cs  DependencyInjectionBenchmarks.cs  DrawNodeGenerationBenchmarks.cs  FlowContainerBenchmarks.cs  InputBenchmarks.cs  InvalidationBenchmarks.cs  ReactiveBenchmarks.cs  RhythmGameFrameBenchmarks.cs  SchedulerBenchmarks.cs  StatisticsBenchmarks.cs  TransformBenchmarks.cs  UpdateLoopBenchmarks.cs  VertexGenerationBenchmarks.cs
Sakura.Framework.CodeFixes/: Sakura.Framework.CodeFixes.csproj
Sakura.Framework.CodeFixes/Analyzers/: AddPartialModifierCodeFix.cs
Sakura.Framework.NativeLibraries/: Sakura.Framework.NativeLibraries.csproj
Sakura.Framework.SPIRV/: Bool32.cs  CMakeLists.txt  CompilationResult.cs  ComputeCompilationResult.cs  CrossCompileInfo.cs  CrossCompileOptions.cs  CrossCompileTarget.cs  GlslCompileInfo.cs  GlslCompileOptions.cs  InteropArray.cs  MacroDefinition.cs  NativeMacroDefinition.cs  NativeSpecializationConstant.cs  ReflectionInfo.cs  Sakura.Framework.SPIRV.csproj  ShaderStages.cs  ShadercShaderKind.cs  SpirvCompilation.cs  SpirvCompilationException.cs  SpirvCompilationResult.cs  Util.cs  VeldridSpirvNative.cs  VertexFragmentCompilationInfo.cs  build-native.cmd  build-native.sh
Sakura.Framework.SPIRV/ext/: known_good.json  sync-shaderc.cmd  sync-shaderc.sh
Sakura.Framework.SourceGenerators/: AnalyzerReleases.Shipped.md  AnalyzerReleases.Unshipped.md  Sakura.Framework.SourceGenerators.csproj
Sakura.Framework.SourceGenerators.Tests/: AnalyzerTestHelper.cs  DependencyInjectionAnalyzerTests.cs  DependencyInjectionGeneratorTests.cs  GeneratorTestHelper.cs  MathStructGeneratorTests.cs  Sakura.Framework.SourceGenerators.Tests.csproj
Sakura.Framework.SourceGenerators/Analyzers/: DependencyInjectionAnalyzer.cs
Sakura.Framework.SourceGenerators/Generators/: MathStructGenerator.cs
Sakura.Framework.Templates/: README.md  Sakura.Framework.Templates.csproj
Sakura.Framework.Tests/: Program.cs  Sakura.Framework.Tests.csproj  TestApp.cs
Sakura.Framework.Tests/Allocation/: NullableDependencyResolutionTest.cs
Sakura.Framework.Tests/Extensions/: IconUsageExtensionsTest.cs
Sakura.Framework.Tests/Graphics/: BasicSliderBarFillTest.cs  ColorInfoTest.cs  ContainerAutoSizeEasingTest.cs  ContainerMaskScaleTest.cs  DeferredClockInheritanceTest.cs  EasingFunctionTest.cs  FlowContainerPaddingTest.cs  FontVariationTest.cs  HitTestTest.cs  InvalidationCascadeTest.cs  RelativeChildSpaceTest.cs  TransformRetargetTest.cs
Sakura.Framework.Tests/IO/: DiskCacheTest.cs
Sakura.Framework.Tests/Input/: InputManagerDispatchTest.cs  InputManagerFocusTest.cs  InputManagerKeyBindingHandlerTest.cs  InputManagerPositionalDispatchTest.cs  InputManagerQueueTest.cs  InputManagerScrollBindingTest.cs  InputPropagationCharacterizationTest.cs  KeyBindingStoreTest.cs  KeyCombinationTest.cs
Sakura.Framework.Tests/Maths/: Vector2Test.cs
Sakura.Framework.Tests/Platform/: FileDialogFilterTest.cs  FileDialogResultTest.cs  HeadlessWindowFileDialogTest.cs
Sakura.Framework.Tests/Reactive/: ReactiveBoolTest.cs  ReactiveFloatTest.cs  ReactiveIntTest.cs  ReactiveNumberTest.cs  ReactiveTest.cs
Sakura.Framework.Tests/Rendering/: ClearGhostDrawNodeTest.cs  DrawNodeCachingTest.cs  DrawNodeSnapshotTest.cs  (+3 more)
SampleApp/: SampleApp.csproj  SampleAppApp.cs
SampleApp.Desktop/: Program.cs  SampleApp.Desktop.csproj
native/sakura-metal/: CMakeLists.txt  README.md  SakuraMetal.h  SakuraMetal.m
(+498 files in other folders)
